Fixed join room members preview when logged in wrapping in weird ways.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -491,8 +491,8 @@ input, button, select, textarea
     width 68px
     text-align center
 
-    // Set max height so long names overflow show up to 2 lines, but no more.
-    max-height 67px
+    // Set height so long names overflow show up to 2 lines, but no more.
+    height 67px
     overflow hidden
 
   .no-one-here, .member-count-more
